share-offer-src/ndpp-toe-socket-v20251027/host/tcp_share_app_rust/src/bindings.rs

/* automatically generated by rust-bindgen */

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]

use libc::*;

// Opaque types
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tcp_conn_manage_s {
    _unused: [u8; 0],
}
pub type tcp_conn_manage_t = tcp_conn_manage_s;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tcp_conn_item_s {
    _unused: [u8; 0],
}
pub type tcp_conn_item_t = tcp_conn_item_s;

// Constants
pub const MAX_CONN: u32 = 64;

// Error codes
pub const TCP_CONN_SUCCESS: i32 = 0;
pub const TCP_CONN_ERROR_INVALID_PARAM: i32 = -1;
pub const TCP_CONN_ERROR_MEMORY_ALLOC: i32 = -2;
pub const TCP_CONN_ERROR_SYSTEM: i32 = -3;

// Connection states
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum conn_state_t {
    CONN_STATE_CLOSED = 0,
    CONN_STATE_LISTENING = 1,
    CONN_STATE_CONNECTING = 2,
    CONN_STATE_CONNECTED = 3,
    CONN_STATE_CLOSING = 4,
}

// Event types
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum conn_event_type_t {
    TCP_EVENT_RX_READY = 1,
    TCP_EVENT_TX_READY = 2,
    TCP_EVENT_CLOSED = 3,
    TCP_EVENT_ERROR = 4,
}

// Event structure
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tcp_conn_event_s {
    pub conn_id: u16,
    pub type_: conn_event_type_t,
}
pub type tcp_conn_event_t = tcp_conn_event_s;

// Configuration structures
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tcp_client_config_s {
    pub remote_port: c_int,
    pub remote_ip: [c_char; 16],
}
pub type tcp_client_config_t = tcp_client_config_s;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tcp_server_config_s {
    pub listen_port: c_int,
    pub listen_ip: [c_char; 16],
    pub max_clients: c_int,
    pub num_configs: c_int,
    pub client_configs: tcp_client_config_t,
}
pub type tcp_server_config_t = tcp_server_config_s;

// Function declarations
unsafe extern "C" {
    pub fn tcp_conn_lib_version() -> *const c_char;
    pub fn tcp_conn_strerror(err: c_int) -> *const c_char;
    pub fn tcp_conn_mgr_create(config_path: *const c_char) -> *mut tcp_conn_manage_t;
    pub fn tcp_conn_mgr_destroy(tcp_mgr: *mut tcp_conn_manage_t);
    pub fn tcp_conn_find_by_id(
        tcp_mgr: *mut tcp_conn_manage_t,
        conn_id: u16,
    ) -> *mut tcp_conn_item_t;
    pub fn tcp_conn_get_event_fd(conn: *mut tcp_conn_item_t) -> c_int;
    pub fn tcp_conn_send(
        tcp_conn: *mut tcp_conn_item_t,
        data: *const c_void,
        len: c_int,
    ) -> c_int;
    pub fn tcp_conn_recv(
        tcp_conn: *mut tcp_conn_item_t,
        ret_data: *mut *const c_void,
        ret_data_len: *mut c_int,
    ) -> c_int;
    pub fn tcp_conn_consume(tcp_conn: *mut tcp_conn_item_t, len: c_int) -> c_int;
    pub fn tcp_conn_connect(
        tcp_mgr: *mut tcp_conn_manage_t,
        conf: *const tcp_client_config_t,
    ) -> c_int;
    pub fn tcp_conn_listen(
        tcp_mgr: *mut tcp_conn_manage_t,
        conf: *const tcp_server_config_t,
    ) -> c_int;
    pub fn tcp_conn_close(tcp_conn: *mut tcp_conn_item_t) -> c_int;
    pub fn tcp_conn_reset(tcp_conn: *mut tcp_conn_item_t) -> c_int;
    pub fn tcp_conn_state(conn: *mut tcp_conn_item_t) -> c_int;
}
